--- a/package.json
+++ b/package.json
@@ -26,17 +26,16 @@
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.1.1",
-    "gulp-less": "^3.3.0",
     "gulp-load-tasks": "^0.8.4",
     "gulp-newer": "^1.3.0",
     "gulp-nunjucks-render": "^2.0.0",
+    "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-uglify": "^2.1.0",
     "gulp-util": "^3.0.8",
     "journalize": "^1.2.0",
     "request": "^2.81.0",
     "run-sequence": "^1.2.2",
-    "s3": "^4.4.0",
     "yargs": "^7.0.2"
   },
   "dependencies": {
