--- a/project.config.json
+++ b/project.config.json
@@ -1,1 +1,16 @@
-{}
+{
+  "authors": [
+    {
+      "name": "Person One", "link": "https://twitter.com/XXXXXXXXXXXXX"
+    },
+    {
+      "name": "Person Two", "link": "https://twitter.com/XXXXXXXXXXXXX"
+    }
+  ],
+  "publish_date": "Feb. 5, 2017",
+  "books": [
+    {"title": "The Clown", "author": "Heinrich Böll"},
+    {"title": "The Shipping News", "author": "Annie Proulx"},
+    {"title": "The Hearing Trumpet", "author": "Leonora Carrington"}
+  ]
+}
