--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.1",
     "gulp-util": "^3.0.8",
+    "imagemin-mozjpeg": "^8.0.0",
     "journalize": "^2.1.0",
     "request": "^2.88.0",
     "yargs": "^12.0.2"
