--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.26.7",
+    "caniuse-lite": "^1.0.30000981",
     "del": "^3.0.0",
     "eslint": "^5.8.0",
     "gulp": "^4.0.0",
@@ -36,7 +37,6 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.1",
     "gulp-util": "^3.0.8",
-    "imagemin-giflossy": "^5.1.10",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^6.0.1",
     "imagemin-webp": "^5.0.0",
