--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.26.7",
     "caniuse-lite": "^1.0.30000981",
+    "cssnano": "^4.1.10",
     "del": "^3.0.0",
     "eslint": "^5.8.0",
     "gulp": "^4.0.0",
@@ -25,7 +26,6 @@
     "gulp-babel": "^6.1.2",
     "gulp-cache": "^1.0.2",
     "gulp-concat": "^2.6.1",
-    "gulp-cssnano": "^2.1.3",
     "gulp-eslint": "^3.0.1",
     "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^2.0.2",
@@ -33,6 +33,7 @@
     "gulp-load-tasks": "^0.8.4",
     "gulp-newer": "^1.4.0",
     "gulp-nunjucks-render": "^2.2.3",
+    "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.1",
