--- a/package.json
+++ b/package.json
@@ -40,14 +40,13 @@
     "gulp-util": "^3.0.8",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^6.0.1",
-    "imagemin-webp": "^5.0.0",
     "journalize": "^2.1.0",
     "request": "^2.88.0",
     "yargs": "^12.0.2"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
-    "popper.js": "^1.14.4"
+    "popper.js": "^1.14.4",
+    "bootstrap": "^4.4.1"
   }
 }
