--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
   "author": "Christian McDonald <christian.mcdonald@utexas.edu>",
   "license": "ISC",
   "devDependencies": {
+    "acorn": "^7.1.1",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.26.7",
-    "caniuse-lite": "^1.0.30001016",
+    "caniuse-lite": "^1.0.30001035",
     "cssnano": "^4.1.10",
     "del": "^3.0.0",
-    "eslint": "^5.8.0",
-    "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^6.0.0",
+    "eslint": "^5.16.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^6.1.0",
     "gulp-babel": "^6.1.2",
-    "gulp-cache": "^1.0.2",
+    "gulp-cache": "^1.1.3",
     "gulp-concat": "^2.6.1",
     "gulp-eslint": "^3.0.1",
     "gulp-htmlmin": "^5.0.1",
@@ -35,18 +36,18 @@
     "gulp-nunjucks-render": "^2.2.3",
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.1",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^6.0.1",
-    "journalize": "^2.1.0",
-    "request": "^2.88.0",
-    "yargs": "^12.0.2"
+    "journalize": "^2.2.1",
+    "request": "^2.88.2",
+    "yargs": "^12.0.5"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
-    "popper.js": "^1.14.4",
-    "bootstrap": "^4.4.1"
+    "popper.js": "^1.16.1"
   }
 }
