--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cssnano": "^4.1.10",
     "del": "^3.0.0",
     "eslint": "^5.16.0",
+    "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-babel": "^6.1.2",
@@ -38,7 +39,6 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
-    "gulp-util": "^3.0.8",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^6.0.1",
     "journalize": "^2.2.1",
