--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A ",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "data:fetch": "node ./utils/get-data.js"
   },
   "repository": {
     "type": "git",
@@ -14,15 +15,20 @@
   "author": "Christian McDonald <christian.mcdonald@utexas.edu>",
   "license": "ISC",
   "devDependencies": {
+    "@newswire/doc-to-archieml": "^1.0.0",
+    "@newswire/sheet-to-data": "^1.0.0",
     "acorn": "^7.1.1",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.26.7",
     "caniuse-lite": "^1.0.30001039",
     "cssnano": "^4.1.10",
+    "d3-array": "^2.4.0",
+    "d3-collection": "^1.0.7",
     "del": "^3.0.0",
     "eslint": "^5.16.0",
     "fancy-log": "^1.3.3",
+    "googleapis": "^49.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-babel": "^6.1.2",
