--- a/project.config.json
+++ b/project.config.json
@@ -2,10 +2,12 @@
   "publish_date": "Feb. 6, 2017",
   "authors": [
     {
-      "name": "Person One", "link": "https://twitter.com/XXXXXXXXXXXXX"
+      "name": "Person One",
+      "link": "https://twitter.com/XXXXXXXXXXXXX"
     },
     {
-      "name": "Person Two", "link": "https://twitter.com/XXXXXXXXXXXXX"
+      "name": "Person Two",
+      "link": "https://twitter.com/XXXXXXXXXXXXX"
     }
   ]
 }
