--- a/project.config.json
+++ b/project.config.json
@@ -9,5 +9,17 @@
       "name": "Person Two",
       "link": "https://twitter.com/XXXXXXXXXXXXX"
     }
+  ],
+  "files": [
+    {
+      "fileId": "1G3KD3Ldqb8y_wj0wHp4l_R7SPDc_sZ161w0ay7ltrRc",
+      "type": "doc",
+      "name": "data"
+    },
+    {
+      "fileId": "1lhSKXYudyDQPzjx21-r9x5ITrWibWHB68oUzsfOZoes",
+      "type": "sheet",
+      "name": "covid"
+    }
   ]
 }
