getting rid of npm/utils

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A ",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "data:fetch": "node ./utils/get-data.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
