--- a/project.config.json
+++ b/project.config.json
@@ -3,12 +3,12 @@
     {
       "fileId": "1RgMhjtkXlbbf9uzSzy_xPRKwxcVZIZqVytgM_JoU4E4",
       "type": "doc",
-      "name": "books"
+      "name": "library"
     },
     {
       "fileId": "1gDwO-32cgpBDn_0niV0iu6TqQTaRDr4nmSqnT53magY",
       "type": "sheet",
-      "name": "library"
+      "name": "bookstores"
     }
   ],
   "publish_date": "Feb. 6, 2017",
