adding error checking

--- a/project.config.json
+++ b/project.config.json
@@ -28,7 +28,7 @@
       "dataKey": "books",
       "layout": "detail",
       "slug": "slug",
-      "path": "books/"
+      "path": "books"
     }
   ]
 }
