--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gulp-uglify": "^3.0.2",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^6.0.1",
+    "is-valid-glob": "^1.0.0",
     "journalize": "^2.2.1",
     "request": "^2.88.2",
     "yargs": "^12.0.5"
