--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     "imagemin-pngquant": "^6.0.1",
     "is-valid-glob": "^1.0.0",
     "journalize": "^2.2.1",
-    "request": "^2.88.2",
-    "yargs": "^12.0.5"
+    "request": "^2.88.2"
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
