--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "icj-project-template",
   "version": "1.1.0",
-  "description": "A ",
+  "description": "A development rig for Intro to Coding for Journalists, a class in the School of Journalism, Moody College of Communication, University of Texas at Austin.",
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
