--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
   ],
   "to_bake": [
     {
-      "layout": "bake-book",
+      "template": "bake-book",
       "data": "library",
       "array": "books",
       "slug": "slug",
